[#12344] Instructor courses page: fix margin of copy instructors from other courses modal on mobile (#12389)
* Fixed copy instructors mobile margin

* Passed linting

* Updated solution to increase consistency

--- a/src/web/app/pages-instructor/instructor-course-edit-page/copy-instructors-from-other-courses-modal/copy-instructors-from-other-courses-modal.component.scss
+++ b/src/web/app/pages-instructor/instructor-course-edit-page/copy-instructors-from-other-courses-modal/copy-instructors-from-other-courses-modal.component.scss
@@ -24,7 +24,7 @@
 #copy-instructor-modal {
   table-layout: auto;
   margin-bottom: 10px;
-  width: 70vw;
+  min-width: 70vw;
 }
 
 .modal-footer {
